Добавлена временная иконка приложения

--- a/uix/kv/screens.kv
+++ b/uix/kv/screens.kv
@@ -165,6 +165,7 @@
             id: actionbar
             ActionView:
                 ActionPrevious:
+                    app_icon: 'data/images/icon.png'
                 ActionOverflow:
                     mode: 'spinner'
                     ActionButton:
