При установке опции use_regex, становится возможно использовать в команде заглавные буквы

--- a/uix/kv/editcommandpopup.kv
+++ b/uix/kv/editcommandpopup.kv
@@ -40,12 +40,12 @@
             spacing: dp(5)
 
             LowerTextInput:
-                id: command_text
+                id: command_textinput
                 size_hint_y: None
                 height: self.font_size*6
                 hint_text: 'Команда'.decode('utf8')
             TextInput:
-                id: response_text
+                id: response_textinput
                 size_hint_y: None
                 height: self.font_size*6
                 hint_text: 'Ответ'.decode('utf8')
