Исправлена опечатка в команде blacklist, добавлены стандартные значения для блока команды

--- a/uix/kv/customcommandblock.kv
+++ b/uix/kv/customcommandblock.kv
@@ -1,4 +1,5 @@
 <CustomCommandBlock>:
+    dropdown: None
     cols: 1
     size_hint_y: None
     height: self.minimum_height
@@ -20,5 +21,6 @@
     halign: 'center'
     size_hint_y: None
     padding_x: dp(30)
+    text: 'команда'
     text_size: self.width, None
     height: self.texture_size[1] + dp(20)
