Переход на библиотеку vk_api, изменение процесса авторизации
Поддержка капчи при авторизации, реализована двухфакторная авторизация
через один запрос, добавлены заготовки функций для обработки обычной
капчи, добавлены ключи для ответов бота, изменена высота полей ввода в
окне настройки пользовательских команд, полноценное функционирование
бота на платформах кроме андроида через subprocess, добавлена опция me
для команды blacklist, добавлена поддержка событий беседы, количество
хранимых id сообщений увеличено с 5 до 10, добавлена директория build
для сборки apk через python-for-android

--- a/uix/kv/editcommandpopup.kv
+++ b/uix/kv/editcommandpopup.kv
@@ -39,12 +39,12 @@
             LowerTextInput:
                 id: command_textinput
                 size_hint_y: None
-                height: self.minimum_height
+                height: max(self.line_height*3, self.minimum_height)
                 hint_text: 'Команда'.decode('utf8')
             TextInput:
                 id: response_textinput
                 size_hint_y: None
-                height: self.minimum_height
+                height: max(self.line_height*3, self.minimum_height)
                 hint_text: 'Ответ'.decode('utf8')
             GridLayout:
                 cols: 6
