--- a/uix/kv/screens.kv
+++ b/uix/kv/screens.kv
@@ -170,7 +170,7 @@
         size_hint: None, None
         size: self.texture_size
         markup: True
-        text: 'VKBot версии %s\nГруппа в ВК: [color=#199ac1][ref=https://vk.com/foga_prod]vk.com/foga_prod[/ref][/color]\n\n[color=#199ac1][ref=https://github.com/fogapod/vkbot/blob/master/README.md]Открыть мануал[/ref][/color]'
+        text: 'VKBot версии %s\nГруппа в ВК: [color=#199ac1][ref=https://vk.com/foga_prod]vk.com/foga_prod[/ref][/color]\n\n[color=#199ac1][ref=https://github.com/Fogapod/VKBot#Руководство-к-использованию]Открыть мануал[/ref][/color]'
         font_size: '18sp'
         on_ref_press: app._open_url(args)
 
