--- a/uix/kv/screens.kv
+++ b/uix/kv/screens.kv
@@ -1,44 +1,6 @@
-<Label>:
-    font_name: 'Roboto-BoldItalic'
-
-<Button>:
-    font_name: 'Roboto-BoldItalic'
-
-<TextInput>:
-    font_name: 'Roboto-BoldItalic'
-
-<Screen>:
-    canvas.before:
-        #Color: 
-            #rgba: .85, .66, .01, 1
-        Rectangle:
-            source: 'data/images/background.jpg'
-            pos: self.pos
-            size: self.size
-
-<LB@Label>:
-    font_size: '15sp'
-    color: 0, .2, .4, 1
-    size_hint: None, None
-    size: self.texture_size[0]+5, self.texture_size[1]+5
-
-<Head@LB>:
-    font_size: '17sp'
-    size: self.texture_size[0]+10,self.texture_size[1]+10
-    
-<TI@TextInput>:
-    size_hint_y: None
-    font_size: '16sp'
-    height: self.minimum_height+10
-    multiline: False
-
-<Apply@Button>:
-    text: 'Принять'
-    font_size: '16sp'
-    background_normal: ''
-    background_color: 0, .2, .4, 1
-    size_hint: None, None
-    size: self.texture_size[0]*2.3, self.texture_size[1]*2.3
+#: import Widget uix.widgets
+#: import FontelloButton uix.widgets
+#: import Apply uix.widgets
 
 
 <TwoFAKeyEnterPopup>:
@@ -59,6 +21,7 @@
             font_size: sp(20)
             size_hint_y: None
             height: self.texture_size[1]
+
         BoxLayout:
             size_hint_y: None
             height: self.minimum_height
@@ -69,12 +32,14 @@
                 size_hint_x: None
                 width: self.texture_size[0]
                 on_release: root.paste_twofa_code(code_textinput)
+
             TextInput:
                 id: code_textinput
                 multiline: False
                 font_size: sp(40)
                 size_hint_y: None
                 height: self.minimum_height
+
             Button:
                 text: '  Ввод  '
                 font_size: sp(20)
@@ -102,7 +67,7 @@
             size: self.texture_size
 
         TextInput:
-            hint_text: 'Логин'.decode('utf-8') #KIVY BUG
+            hint_text: 'Логин'.decode('utf8')
             id: login_textinput
             size_hint: None, None
             font_size: '18sp'
@@ -111,7 +76,7 @@
             multiline: False
 
         TextInput:
-            hint_text: 'Пароль'.decode('utf-8') #KIVY BUG
+            hint_text: 'Пароль'.decode('utf8')
             id: pass_textinput
             size_hint: None, None
             font_size: '18sp'
@@ -135,7 +100,8 @@
             size_hint_y: None
             size: self.minimum_size
 
-            Label:
+            Widget
+
             Button:
                 id: enter
                 text: 'Войти'
@@ -146,7 +112,8 @@
                 size_hint: 1.3, None
                 height: self.texture_size[1]
                 on_release: root.log_in()
-            Label:
+
+            Widget
 
     Button:
         id: pass_auth
@@ -165,6 +132,7 @@
 <InfoPopup>:
     size_hint: None, None
     size: label.width + dp(40), label.height + dp(50)
+
     Label:
         id: label
         size_hint: None, None
@@ -202,13 +170,16 @@
             cols: 3
             size_hint: None, None
             size: image.width, self.minimum_height
+
             Button:
                 text: ' Принять '
                 font_size: '17sp'
                 size_hint: None, None
                 size: self.texture_size[0], self.texture_size[1]*2
                 on_release: root.retry_request(textinput.text)
-            Widget:
+
+            Widget
+
             Button:
                 text: ' Отмена '
                 font_size: '17sp'
@@ -225,26 +196,31 @@
         
         ActionBar:
             id: actionbar
+
             ActionView:
                 ActionPrevious:
                     app_icon: 'data/images/icon.png'
+
                 ActionButton:
                     text: 'Мои команды'
                     on_release: root.parent.show_custom_commands_screen()
+
                 ActionOverflow:
                     mode: 'spinner'
+
                     ActionButton:
                         minimum_width: '110sp'
                         text: 'Настройки'
                         on_release: app.open_settings()
+
                     ActionButton:
                         text: 'Авторизация'
-                        on_release:
-                            root.parent.show_auth_screen()
+                        on_release: root.parent.show_auth_screen()
+
                     ActionButton:
                         text: 'Информация'
-                        on_release:
-                            root.show_info()
+                        on_release: root.show_info()
+
                     ActionButton:
                         text: 'Выйти'
                         on_release: root.logout()
@@ -264,8 +240,13 @@
                     pos_hint_y: None
                     pos: self.pos[0], actionbar.pos[1]-actionbar.height*1.5
                     on_release: root.on_main_btn_press()
-                Head:
+
+                Label:
                     id: answers_count_lb
+                    font_size: '17sp'
+                    color: 0, .2, .4, 1
+                    size_hint: None, None
+                    size: self.texture_size[0]+10, self.texture_size[1]+10
                     pos_hint: {'center_x':.5}
                     pos_hint_y: None
                     pos: self.pos[0], main_btn.pos[1]-actionbar.height*1.3
@@ -307,25 +288,21 @@
             size_hint_y: None
             height: self.minimum_height
 
-            Button:
-                text: 'Добавить'
-                size_hint_x: None
-                width: self.texture_size[0] + dp(5)
+            FontelloButton:
+                text: 'P'
+                size_hint_x: 1.5
                 on_release: root.open_new_command_popup()
 
-            Widget:
+            Widget
 
             Button:
                 text: 'Вернуться'
-                size_hint: None, None
-                width: self.texture_size[0] + dp(5)
-                height: self.texture_size[1]*2.4 + dp(3)
+                size_hint: 1, None
                 on_release: root.leave()
 
-            Widget:
+            Widget
 
-            Button:
-                text: 'Сортировка'
-                size_hint_x: None
-                width: self.texture_size[0] + dp(5)
+            FontelloButton:
+                text: 'U'
+                size_hint_x: 1.5
                 on_release: root.sort_blocks()
