Implemented logging and stable mode for bot, small fixes and improvements

--- a/uix/kv/customcommandblock.kv
+++ b/uix/kv/customcommandblock.kv
@@ -1,4 +1,7 @@
-<CustomCommandBlock>:
+#: import Widget uix.widgets
+
+
+<CustomCommandBlock>: # BoxLayout in future
     dropdown: None
     cols: 1
     size_hint_y: None
@@ -15,7 +18,6 @@
 
 
 <CommandButton>:
-    font_name: 'Roboto-BoldItalic'
     background_normal: ''
     background_color: .24, .69, .55, 1
     halign: 'center'
