--- a/uix/kv/editcommandpopup.kv
+++ b/uix/kv/editcommandpopup.kv
@@ -17,7 +17,7 @@
     height: content.height + dp(70)
     pos_hint: {'center_y':.6}
 
-    GridLayout:
+    GridLayout: # BoxLayout in future
         id: content
         cols: 1
         size_hint_y: None
