--- a/uix/kv/screens.kv
+++ b/uix/kv/screens.kv
@@ -1,6 +1,9 @@
 #: import Widget uix.widgets
 #: import FontelloButton uix.widgets
 #: import Apply uix.widgets
+#: import ScrollEffect kivy.effects.scroll.ScrollEffect
+
+#: import __version__ bot.core.__version__
 
 
 <TwoFAKeyEnterPopup>:
@@ -8,7 +11,7 @@
     height: content.height + dp(30)
     pos_hint: {'center_y': 0.7}
 
-    GridLayout:
+    GridLayout: # BoxLayout in future
         id: content
         cols: 1
         size_hint: None, None
@@ -131,14 +134,14 @@
 
 <InfoPopup>:
     size_hint: None, None
-    size: label.width + dp(40), label.height + dp(50)
+    size: content.width + dp(40), content.height + dp(50)
 
     Label:
-        id: label
+        id: content
         size_hint: None, None
         size: self.texture_size
         markup: True
-        text: 'VKBot версии %s\nГруппа в ВК: [color=#199ac1][ref=https://vk.com/foga_prod]vk.com/foga_prod[/ref][/color]\n\n[color=#199ac1][ref=https://github.com/Fogapod/VKBot/tree/0.1.0dev#Руководство-к-использованию]Открыть мануал[/ref][/color]'
+        text: 'VKBot версии %s\nГруппа в ВК: [color=#199ac1][ref=https://vk.com/foga_prod]vk.com/foga_prod[/ref][/color]\n\n[color=#199ac1][ref=https://github.com/Fogapod/VKBot/tree/0.1.0dev#Руководство-к-использованию]Открыть мануал[/ref][/color]' % __version__
         font_size: '18sp'
         on_ref_press: app._open_url(args)
 
@@ -195,76 +198,96 @@
         orientation: 'vertical'
         
         ActionBar:
-            id: actionbar
-
             ActionView:
                 ActionPrevious:
+                    id: actionprevious
                     app_icon: 'data/images/icon.png'
 
                 ActionButton:
                     text: 'Мои команды'
+
                     on_release: root.parent.show_custom_commands_screen()
 
                 ActionOverflow:
                     mode: 'spinner'
 
                     ActionButton:
-                        minimum_width: '110sp'
+                        text: '[Экспорт логов]'
+
+                        on_release: app._export_logs()
+
+                    ActionButton:
+                        minimum_width: '125sp'
                         text: 'Настройки'
+
                         on_release: app.open_settings()
 
                     ActionButton:
                         text: 'Авторизация'
+
                         on_release: root.parent.show_auth_screen()
 
                     ActionButton:
                         text: 'Информация'
+
                         on_release: root.show_info()
 
                     ActionButton:
                         text: 'Выйти'
+
                         on_release: root.logout()
 
-        Carousel:
-            loop: True
+                    ActionButton:
+                        text: 'Очистка лога'
 
-            FloatLayout:
+                        on_release:
+                            root.ids.logging_textinput.text = root.ids.logging_textinput.default_text
+
+        BoxLayout:
+            orientation: 'vertical'
+            padding: dp(3)
+
+            GridLayout: # BoxLayout in future
+                cols: 1
+                padding: dp(10), dp(30)
+                size_hint_y: None
+                height: self.minimum_height
+
                 Button:
                     id: main_btn
                     font_size: '16sp'
                     background_normal: ''
                     background_color: 0, .2, .4, 1
-                    size_hint: None, None
-                    size: self.texture_size[0]*2.3, self.texture_size[1]*2.3
-                    pos_hint: {'center_x':.5}
-                    pos_hint_y: None
-                    pos: self.pos[0], actionbar.pos[1]-actionbar.height*1.5
+                    size_hint: 1, None
+
                     on_release: root.on_main_btn_press()
 
-                Label:
-                    id: answers_count_lb
-                    font_size: '17sp'
-                    color: 0, .2, .4, 1
-                    size_hint: None, None
-                    size: self.texture_size[0]+10, self.texture_size[1]+10
-                    pos_hint: {'center_x':.5}
-                    pos_hint_y: None
-                    pos: self.pos[0], main_btn.pos[1]-actionbar.height*1.3
+            BoxLayout:
+                padding: dp(2)
+                canvas.before:
+                    Color:
+                        rgb: .2, .2, .2
+                    Rectangle:
+                        pos: self.pos
+                        size: self.size
 
-            FloatLayout:
-                Apply:
-                    text: 'Восстановить статус'
-                    width: self.texture_size[0] + dp(4)
-                    pos_hint: {'center_x':.5, 'pos_y': None}
-                    pos: self.pos[0], export_logs_btn.pos[1] + export_logs_btn.height*2
-                    disabled: True
+                ScrollView:
+                    effect_cls: ScrollEffect
 
-                Apply:
-                    id: export_logs_btn
-                    text: 'Экспортировать логи'
-                    width: self.texture_size[0] + dp(4)
-                    pos_hint: {'center_x':.5, 'center_y':.1}
-                    on_release: app._export_logs()
+                    TextInput:
+                        id: logging_textinput
+                        default_text: 'Добро пожаловать в приложение VKBot версии %s !\n' % __version__
+                        text: self.default_text
+                        text_size: self.width, None
+                        foreground_color: 1, 1, 1, .8
+                        font_name: 'Roboto-Bold'
+                        font_size: sp(11)
+                        background_normal: ''
+                        background_active: ''
+                        background_color: .46, .46, .46, 1
+                        readonly: True
+                        size_hint_y: None
+                        height: self.minimum_height
 
 
 <CustomCommandsScreen>:
@@ -276,7 +299,7 @@
         spacing: dp(5)
 
         ScrollView:
-            GridLayout:
+            GridLayout: # BoxLayout in future
                 id: cc_list
                 cols: 1
                 spacing: dp(2)
@@ -291,6 +314,7 @@
             FontelloButton:
                 text: 'P'
                 size_hint_x: 1.5
+
                 on_release: root.open_new_command_popup()
 
             Widget
@@ -298,6 +322,7 @@
             Button:
                 text: 'Вернуться'
                 size_hint: 1, None
+
                 on_release: root.leave()
 
             Widget
@@ -305,4 +330,5 @@
             FontelloButton:
                 text: 'U'
                 size_hint_x: 1.5
+
                 on_release: root.sort_blocks()
