Edded ScrollEffect to the list of custom commands

--- a/uix/kv/screens.kv
+++ b/uix/kv/screens.kv
@@ -299,6 +299,8 @@
         spacing: dp(5)
 
         ScrollView:
+            effect_cls: ScrollEffect
+
             GridLayout: # BoxLayout in future
                 id: cc_list
                 cols: 1
