--- a/uix/kv/widgets.kv
+++ b/uix/kv/widgets.kv
@@ -17,10 +17,4 @@
             size: self.size
 
 
-<Apply>:
-    text: 'Принять'
-    font_size: '16sp'
-    background_normal: ''
-    background_color: 0, .2, .4, 1
-    size_hint: None, None
-    size: self.texture_size[0]*2.3, self.texture_size[1]*2.3
+<ColoredLabel>
