Optimised logging, interface improvements, improved connection error handling, Fix: now settings screen will be reloaded when settings file changed

--- a/uix/kv/widgets.kv
+++ b/uix/kv/widgets.kv
@@ -2,6 +2,11 @@
     font_name: 'fonts/Roboto-BoldItalic'
 
 
+<BlueButton>:
+    background_normal: ''
+    background_color: 0, .2, .5, 1
+
+
 <FontelloButton>:
     font_name: 'fonts/fontello.ttf'
     font_size: '25sp'
@@ -15,6 +20,3 @@
             source: 'data/images/background.jpg'
             pos: self.pos
             size: self.size
-
-
-<ColoredLabel>
