--- a/uix/kv/customcommandblock.kv
+++ b/uix/kv/customcommandblock.kv
@@ -1,15 +1,14 @@
 #: import Widget uix.widgets
 
 
-<CustomCommandBlock>: # BoxLayout in future
+<CustomCommandBlock>:
     dropdown: None
     cols: 1
     size_hint_y: None
     height: self.minimum_height
 
-    CommandButton:
+    DropdownButton:
         id: dropdown_btn
-        background_color: 0, .2, .4, 1
 
 
 <ListDropDown>:
@@ -18,11 +17,15 @@
 
 
 <CommandButton>:
-    background_normal: ''
-    background_color: .24, .69, .55, 1
-    halign: 'center'
-    size_hint_y: None
-    padding_x: dp(30)
     text: 'команда'
     text_size: self.width, None
-    height: self.texture_size[1] + dp(20)
+    halign: 'center'
+    background_normal: ''
+    background_color: .25, .7, .7, 1
+    padding: dp(20), dp(10)
+    size_hint_y: None
+    height: self.texture_size[1]
+
+
+<DropdownButton@CommandButton>:
+    background_color: 0, .2, .5, 1
