--- a/uix/kv/editcommandpopup.kv
+++ b/uix/kv/editcommandpopup.kv
@@ -32,6 +32,7 @@
 
             LowerTextInput:
                 id: command_textinput
+                text_size: self.width, None
                 size_hint_y: None
                 height:
                     min((self.line_height+dp(1))*6, max((self.line_height+dp(1))*3, self.minimum_height))
@@ -39,6 +40,7 @@
 
             TextInput:
                 id: response_textinput
+                text_size: self.width, None
                 size_hint_y: None
                 height:
                     min((self.line_height+dp(1))*6, max((self.line_height+dp(1))*3, self.minimum_height))
