--- a/uix/kv/screens.kv
+++ b/uix/kv/screens.kv
@@ -1,6 +1,6 @@
 #: import Widget uix.widgets
+#: import BlueButton uix.widgets
 #: import FontelloButton uix.widgets
-#: import ColoredLabel uix.widgets
 #: import ScrollEffect kivy.effects.scroll.ScrollEffect
 
 #: import __version__ bot.core.__version__
@@ -105,25 +105,21 @@
 
             Widget
 
-            Button:
+            BlueButton:
                 id: enter
                 text: 'Войти'
                 font_size: '16sp'
                 padding_y: dp(10)
-                background_normal: ''
-                background_color: 0, .2, .4, 1
                 size_hint: 1.3, None
                 height: self.texture_size[1]
                 on_release: root.log_in()
 
             Widget
 
-    Button:
+    BlueButton:
         id: pass_auth
         text: 'Пропустить'
         font_size: '16sp'
-        background_normal: ''
-        background_color: 0, .2, .4, .5
         size_hint: None, None
         size: self.texture_size[0]*2.3, self.texture_size[1]*2.3
         pos_hint: {'center_x':.5}
@@ -197,7 +193,7 @@
 
     BoxLayout:
         orientation: 'vertical'
-        
+
         ActionBar:
             ActionView:
                 ActionPrevious:
@@ -242,47 +238,62 @@
                         text: 'Очистка лога'
 
                         on_release:
-                            root.ids.logging_textinput.text = root.ids.logging_textinput.default_text
+                            root.ids.logging_panel.text = root.ids.logging_panel.default_text
+
+        GridLayout: # BoxLayout in future
+            cols: 1
+            padding: dp(20), dp(30)
+            size_hint_y: None
+            height: self.minimum_height
+
+            BlueButton:
+                id: main_btn
+                font_size: '16sp'
+                size_hint: 1, None
+
+                on_release: root.on_main_btn_press()
 
         BoxLayout:
-            orientation: 'vertical'
-            padding: dp(3)
+            padding: dp(4)
 
-            GridLayout: # BoxLayout in future
-                cols: 1
-                padding: dp(10), dp(30)
-                size_hint_y: None
-                height: self.minimum_height
-
-                Button:
-                    id: main_btn
-                    font_size: '16sp'
-                    background_normal: ''
-                    background_color: 0, .2, .4, 1
-                    size_hint: 1, None
-
-                    on_release: root.on_main_btn_press()
+            canvas.before:
+                Color:
+                    rgb: .2, .2, .2
+                Rectangle:
+                    pos: self.pos
+                    size: self.size
 
             BoxLayout:
                 padding: dp(2)
+
                 canvas.before:
                     Color:
-                        rgb: .2, .2, .2
+                        rgb: 0, 0, 0
+
                     Rectangle:
                         pos: self.pos
                         size: self.size
 
+                    Color:
+                        rgb: .46, .46, .46
+
+                    Rectangle:
+                        pos:
+                            self.pos[0] + self.padding[0]/2, self.pos[1] + self.padding[1]/2
+                        size:
+                            self.size[0] - self.padding[0], self.size[1] - self.padding[1]
+
                 ScrollView:
                     effect_cls: ScrollEffect
 
-                    ColoredLabel:
+                    Label:
                         id: logging_panel
-                        default_text: 'Добро пожаловать в приложение VKBot версии %s !\n'.decode('utf8') % __version__
+                        default_text: '[b]Добро пожаловать в приложение [i]VKBot[/i] версии %s !\n[/b]'.decode('utf8') % __version__
                         text: self.default_text
                         text_size: self.width, None
                         color: 1, 1, 1, .8
-                        font_name: 'RobotoMono-Regular'
-                        font_size: sp(10)
+                        font_name: 'Roboto' # TODO 'RobotoMono'
+                        font_size: sp(12)
                         markup: True
                         padding: dp(2), dp(2)
                         size_hint_y: None
@@ -297,15 +308,35 @@
         padding: dp(10)
         spacing: dp(5)
 
-        ScrollView:
-            effect_cls: ScrollEffect
+        BoxLayout:
+            padding: dp(4)
 
-            GridLayout: # BoxLayout in future
-                id: cc_list
-                cols: 1
-                spacing: dp(2)
-                size_hint_y: None
-                height: self.minimum_size[1]
+            canvas.before:
+                Color:
+                    rgb: 0, 0, 0
+
+                Rectangle:
+                    pos: self.pos
+                    size: self.size
+
+                Color:
+                    rgb: .46, .46, .46
+
+                Rectangle:
+                    pos:
+                        self.pos[0] + self.padding[0]/2, self.pos[1] + self.padding[1]/2
+                    size:
+                        self.size[0] - self.padding[0], self.size[1] - self.padding[1]
+
+            ScrollView:
+                effect_cls: ScrollEffect
+
+                GridLayout: # BoxLayout in future
+                    id: cc_list
+                    cols: 1
+                    spacing: dp(2)
+                    size_hint_y: None
+                    height: self.minimum_size[1]
 
         GridLayout:
             cols: 5
