--- a/uix/kv/widgets.kv
+++ b/uix/kv/widgets.kv
@@ -2,6 +2,9 @@
     font_name: 'fonts/Roboto-BoldItalic'
 
 
+<ShadeButton>:
+
+
 <BlueButton>:
     background_normal: ''
     background_color: 0, .2, .5, 1
