--- a/uix/kv/customcommandblock.kv
+++ b/uix/kv/customcommandblock.kv
@@ -20,7 +20,6 @@
     text: 'команда'
     text_size: self.width, None
     halign: 'center'
-    background_normal: ''
     background_color: .25, .7, .7, 1
     padding: dp(20), dp(10)
     size_hint_y: None
@@ -28,4 +27,4 @@
 
 
 <DropdownButton@CommandButton>:
-    background_color: 0, .2, .5, 1
+    background_color: .8, .8, 0, 1
