--- a/uix/kv/editcommandpopup.kv
+++ b/uix/kv/editcommandpopup.kv
@@ -1,5 +1,6 @@
 #: import LowerTextInput uix.widgets
 #: import Widget uix.widgets
+#: import ShadeButton uix.widgets
 #: import FontelloButton uix.widgets
 
 
@@ -95,7 +96,7 @@
             size_hint_y: None
             spacing: dp(5)
 
-            Button:
+            ShadeButton:
                 id: apply_btn
                 _callback: None
                 text: 'Применить'
@@ -107,6 +108,6 @@
                 size_hint_x: None
                 background_color: 1, 0, 0, 1
 
-            Button:
+            ShadeButton:
                 text: 'Отмена'
                 on_release: root.dismiss()
