Added link to github repository into info popup, added vk icon

--- a/uix/kv/screens.kv
+++ b/uix/kv/screens.kv
@@ -139,7 +139,7 @@
         size_hint: None, None
         size: self.texture_size
         markup: True
-        text: 'VKBot версии %s\nГруппа в ВК: [color=#199ac1][ref=https://vk.com/foga_prod]vk.com/foga_prod[/ref][/color]\n\n[color=#199ac1][ref=https://github.com/Fogapod/VKBot/tree/0.1.0dev#Руководство-к-использованию]Открыть мануал[/ref][/color]' % __version__
+        text: 'VKBot версии %s\n\n[font=fonts/fontello.ttf]V[/font] [color=#199ac1][ref=https://vk.com/foga_prod]Группа в ВК[/ref][/color]\n[font=fonts/fontello.ttf]I[/font] [color=#199ac1][ref=https://github.com/Fogapod/VKBot]Репозиторий на github[/ref][/color]\n\n[color=#199ac1][ref=https://github.com/Fogapod/VKBot/tree/0.1.0dev#Руководство-к-использованию]Открыть мануал[/ref][/color]' % __version__
         font_size: '18sp'
         on_ref_press: app._open_url(args)
 
