--- a/uix/kv/editcommandpopup.kv
+++ b/uix/kv/editcommandpopup.kv
@@ -8,7 +8,8 @@
     current_state: 0
 
     background_color: 1, 0, 0, .6
-    size_hint: 1.5, None
+    size_hint: None, None
+    size: dp(55), dp(55)
 
 
 <EditCommandPopup>:
@@ -50,7 +51,7 @@
                 cols: 9
                 size_hint_y: None
                 height: self.minimum_height
-                spacing: dp(5)
+                spacing: dp(1)
 
                 OptionButton:
                     states: (0, 2)
@@ -92,22 +93,29 @@
 
         GridLayout:
             cols: 3
-            size_hint_y: None
             spacing: dp(5)
+            size_hint_y: None
+            height: self.minimum_height
 
             Button:
                 id: apply_btn
                 text: 'Применить'
+                size_hint_y: None
+                height: delete_command_btn.height
                 _callback: None
 
             FontelloButton:
                 id: delete_command_btn
                 _callback: None
                 text: 'C'
-                size_hint_x: None
+                size_hint: None, None
+                padding: dp(10), dp(10)
+                size: self.texture_size
                 background_color: 1, 0, 0, 1
 
             Button:
                 text: 'Отмена'
+                size_hint_y: None
+                height: delete_command_btn.height
 
                 on_release: root.dismiss()
